# vibe

./: AUDIO_ROUTING.md  Cargo.toml
vibe/: Cargo.toml
vibe-audio/: Cargo.toml
vibe-audio/examples/: list_inputs.rs
vibe-audio/src/: bpm_detector.rs  lib.rs  sample_processor.rs
vibe-audio/src/bar_processor/: mod.rs
vibe-audio/src/bar_processor/channel_ctx/: fft_out_metadata.rs  mod.rs
vibe-audio/src/fetcher/: mod.rs  web_audio.rs
vibe-renderer/: Cargo.toml
vibe-renderer/examples/demo/: main.rs
vibe-renderer/src/: lib.rs  util.rs
vibe-renderer/src/components/: mod.rs
vibe-renderer/src/components/fragment_canvas/: fragment_preamble.glsl  fragment_preamble.wgsl  mod.rs
vibe-renderer/src/components/live_wallpaper/pulse_edges/: mod.rs
vibe-renderer/src/texture_generation/edge_distance_map/: mod.rs
vibe-renderer/tests/fragment_canvas/: mod.rs
vibe-web/: Cargo.toml  build.sh
vibe-web/src/: lib.rs
vibe-web/www/: index.html  main.js  style.css
vibe-web/www/shaders/: default.wgsl
vibe/src/: colors.rs  main.rs  state.rs  window.rs
vibe/src/output/: mod.rs
vibe/src/output/config/: mod.rs
vibe/src/output/config/component/: fragment_canvas.rs
