[workspace]
members = ["vibe-renderer", "vibe", "vibe-audio", "vibe-web"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
wgpu = { version = "28.0", default-features = false, features = [
  # from the default features
  "gles",
  "parking_lot",
  "std",
  "wgsl",

  # extra features
  "serde",
  "glsl",
  "naga-ir",
] }

# Web platform dependencies
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1"

serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
cgmath = { version = "0.18", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
vibe-audio = { path = "./vibe-audio" }
image = "0.25"
xdg = "3.0"
toml = "0.9"
tracing-indicatif = "0.3"
bytemuck = "1.25"
colored = "3"

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
