[package]
name = "vibe-audio"
version = "0.0.1"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "An audio library for visualizers"
license = "GPL-3.0-or-later"
homepage = "https://github.com/TornaxO7/vibe/vibe-audio"
repository = "https://github.com/TornaxO7/vibe/tree/main/vibe-audio"
publish = false

[features]
default = ["native"]
native = ["cpal"]

[dependencies]
tracing.workspace = true
thiserror.workspace = true

apodize = "1"
cpal = { version = "0.17", optional = true }
nalgebra = { version = "0.34", default-features = false, features = ["std"] }
realfft = "3.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["AudioContext", "AnalyserNode", "AudioNode", "MediaStream", "MediaStreamAudioSourceNode", "GainNode", "MediaDevices", "Navigator"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
