[package]
name = "vibe-renderer"
version = "0.0.2"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "Renderer ecosystem for vibe."
license = "GPL-2.0"
repository = "https://github.com/TornaxO7/vibe/vibe-renderer"
publish = false

[dependencies]
cgmath.workspace = true
image.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
vibe-audio.workspace = true
wgpu.workspace = true
xdg.workspace = true
tracing-indicatif.workspace = true
bytemuck.workspace = true

chrono = "0.4"
fastrand = "2.3"
pollster = "0.4"

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true

winit = "0.30"
nv-flip = "0.1"
