[package]
name = "vibe-web"
version = "0.1.0"
edition = "2021"
description = "Web (WASM) frontend for vibe audio visualizer"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { workspace = true, features = ["webgpu", "webgl"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
log = "0.4"
bytemuck.workspace = true

[dependencies.web-sys]
workspace = true
features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Performance",
]
