[package]
name = "vibe"
version = "2.5.0"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A desktop music visualizer for wayland."
license = "GPL-2.0"
repository = "https://github.com/TornaxO7/vibe"
publish = false

[package.metadata.dist]
dist = true

[dependencies]
anyhow.workspace = true
cgmath.workspace = true
clap.workspace = true
image.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
vibe-audio.workspace = true
wgpu = { workspace = true, features = ["vulkan"] }
xdg.workspace = true
tracing-indicatif.workspace = true

raw-window-handle = "0.6"

wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
smithay-client-toolkit = "0.20"

vibe-renderer = { path = "../vibe-renderer" }

winit = { version = "0.30", default-features = false, features = [
  "rwh_06",
  "wayland",
  "wayland-csd-adwaita",
  "wayland-dlopen",
] }

notify = { version = "8", default-features = false }
